--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -763,6 +763,8 @@
                                             </div>
                                             
                                             <p class="mt-3 textc reqstar">Appointment Type</p>
+                                            
+                                            <p class="mt-3 textc reqstar">Appointment Type</p>
                                             <div>
                                                 <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
                                                 <label for="echocheck" class="textc">Echocardiography</label><br>
