--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -762,7 +762,7 @@
                                                 </svg>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Appointment Type</p>
+                                            <p class="mt-3 textc reqstar">Please choose which best describes your experience with Melbourne Cardiology Services:</p>
                                             
                                             <p class="mt-3 textc reqstar">Appointment Type</p>
                                             <div>
