--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -774,7 +774,7 @@
                                                 <label for="consultcheck" class="textc">Consultation</label>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Please choose which best describes your experience with Melbourne Cardiology Services:</p>
+                                            <p class="mt-3 textc reqstar">Please select the option which best describes your experience with Melbourne Cardiology Services in the following statements:</p>
                                             
                                             <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
                                             <div>
