--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -776,7 +776,7 @@
                                             
                                             <p class="mt-3 textc reqstar">Please select the option which best describes your experience with Melbourne Cardiology Services in the following statements:</p>
                                             
-                                            <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
+                                            <p class="mt-3 textc reqstar">Scheduling an appointment is/was easy</p>
                                             <div>
                                                 <input type="radio" name="pfbschrating" value="Strongly Agree " class="" id="schestragradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="schestragradio" class="textc">Strongly Agree</label><br>
