--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -669,8 +669,8 @@
                                                 </div>
 
                                                 <div class="input-wrapper twin">
-                                                    <input data-parsley-trigger="change" data-parsley-error-message="Last name required." type="text" name="patient last name" title="Patient's last name" id="plastname" value="" aria-required="true" required="" class="form__input">
-                                                    <label class="form__label reqstar" for="plastname">Last Name
+                                                    <input data-parsley-trigger="change" data-parsley-error-message="Last name required." type="text" name="patient last name" title="Patient's last name" id="plastname" value="" aria-required="false" class="form__input">
+                                                    <label class="form__label" for="plastname">Last Name
                                                         <svg class="form__valid" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="611.983px" height="611.983px" viewBox="0 0 611.983 611.983" style="enable-background:new 0 0 611.983 611.983;" xml:space="preserve">
                                                             <g>
                                                                 <path d="M217.625,515.458h-0.06c-6.517,0-12.775-2.65-17.379-7.255L7.147,313.77c-9.586-9.646-9.506-25.211,0.1-34.757
