--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -806,8 +806,8 @@
                                             
                                             <p class="mt-3 textc reqstar">The consultant/technician was professional and answered all my questions regarding the procedure</p>
                                             <div>
-                                                <input type="radio" name="pfbprofrating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="rateproflink" data-parsley-error-message="1 selection is required." />
-                                                <label for="staffstragradio" class="textc">Strongly Agree</label><br>
+                                                <input type="radio" name="pfbprofrating" value="Strongly Agree " class="" id="profstragradio" data-parsley-multiple="rateproflink" data-parsley-error-message="1 selection is required." />
+                                                <label for="profstragradio" class="textc">Strongly Agree</label><br>
                                                 <input type="radio" name="pfbprofrating" value="Agree " class="" id="staffagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbprofrating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
