--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -808,8 +808,8 @@
                                             <div>
                                                 <input type="radio" name="pfbprofrating" value="Strongly Agree " class="" id="profstragradio" data-parsley-multiple="rateproflink" data-parsley-error-message="1 selection is required." />
                                                 <label for="profstragradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="pfbprofrating" value="Agree " class="" id="staffagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="staffagradio" class="textc">Agree</label><br>
+                                                <input type="radio" name="pfbprofrating" value="Agree " class="" id="profagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="profagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbprofrating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbprofrating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
