--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -812,8 +812,8 @@
                                                 <label for="profagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbprofrating" value="Neutral " class="" id="profneuradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="profneuradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="pfbprofrating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="staffdisagradio" class="textc">Disagree</label><br>
+                                                <input type="radio" name="pfbprofrating" value="Disagree " class="" id="profdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="profdisagradio" class="textc">Disagree</label><br>
                                                 <input type="radio" name="pfbprofrating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
