--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -814,8 +814,8 @@
                                                 <label for="profneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbprofrating" value="Disagree " class="" id="profdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="profdisagradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="pfbprofrating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
+                                                <input type="radio" name="pfbprofrating" value="Strongly Disagree " class="" id="profstrdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="profstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
                                             
                                             <p class="mt-3 textc reqstar">Information was provided without any delay</p>
