--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -354,6 +354,12 @@
     <link rel="stylesheet" href="assets/fonts/toriga.css">
     <link rel="stylesheet" href="assets/fonts/vic.css">
     <style>
+         /*html,
+        body {
+            max-width: 100%;
+            overflow-x: hidden;
+        }*/
+        
         .white {
             color: white !important;
         }
@@ -630,8 +636,8 @@
                 </div>
             </div>
             <div class="container-fluid feature row" style="margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
-                <div class="col-sm-1"></div>
-                <div class="col-12 col-sm-10 pt-5 text3 container container--adaptive">
+                <div class="col-1"></div>
+                <div class="col-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
                         If you are a doctor wishing to provide us with feedback of your experience with us, please use the Doctor Feedback form <a href="dfeedback" class="textlink textb">here</a>.
                         <br>
@@ -864,10 +870,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-1"></div>
+                <div class="col-1"></div>
             </div>
             <div class="row" style="background: var(--color-bg)">
-                <div class="col-12" style="margin-right: 0 !important; padding-right: 0 !important;">
+                <div class="col-1"></div>
+                <div class="col-10" style="margin-right: 0 !important; padding-right: 0 !important;">
                     <footer class="main-footer" data-scroll>
                         <script>
                             var fero_server_id = '$2y$10$ZisV/mjILpfoj1Cb3toxlOw6PKpslf6sU20bgiwI9omoQSoNNTXzi';
@@ -948,6 +955,7 @@
                         </div> <!-- container -->
                     </footer>
                 </div>
+                <div class="col-1"></div>
             </div>
         </div>
     </div>
