--- a/main/contact.html
+++ b/main/contact.html
@@ -537,7 +537,7 @@
         }
 
     </style>
-    <title>Patient Feedback | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
+    <title>Contact | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
 </head>
 
 <body onload="mcsloader()" style="cursor: none">
