--- a/main/contact.html
+++ b/main/contact.html
@@ -632,7 +632,7 @@
             <div class="heropurple">
                 <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
                 <div class="col-12">
-                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">Patient Feedback</h1>
+                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">Contact</h1>
                 </div>
             </div>
             <div class="container-fluid feature row" style="margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
