--- a/main/contact.html
+++ b/main/contact.html
@@ -744,7 +744,7 @@
                                                 </svg>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Appointment Type</p>
+                                            <p class="mt-3 textc reqstar">Reason for Contact</p>
                                             <div>
                                                 <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
                                                 <label for="echocheck" class="textc">Echocardiography</label><br>
