--- a/main/contact.html
+++ b/main/contact.html
@@ -749,7 +749,7 @@
                                                 <input type="checkbox" name="echo" value="echo " class="qcheck" id="echocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
                                                 <label for="echocheck" class="textc">General Enquiries</label><br>
                                                 <input type="checkbox" name="stress echo" value="stressecho " class="qcheck" id="stressechocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                <label for="stressechocheck" class="textc">Stress Echocardiography</label><br>
+                                                <label for="stressechocheck" class="textc">Website Feedback</label><br>
                                                 <input type="checkbox" name="holter" value="holter " class="qcheck" id="holtercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="holtercheck" class="textc">Holter Monitoring</label><br>
                                                 <input type="checkbox" name="consult" value="consult " class="qcheck" id="consultcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
