--- a/main/contact.html
+++ b/main/contact.html
@@ -753,7 +753,7 @@
                                                 <input type="checkbox" name="holter" value="holter " class="qcheck" id="holtercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="holtercheck" class="textc">Careers</label><br>
                                                 <input type="checkbox" name="consult" value="consult " class="qcheck" id="consultcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                <label for="consultcheck" class="textc">Consultation</label>
+                                                <label for="consultcheck" class="textc">Other</label>
                                             </div>
                                             
                                             <p class="mt-3 textc reqstar">Please select the option which best describes your experience with Melbourne Cardiology Services in the following statements:</p>
