--- a/main/contact.html
+++ b/main/contact.html
@@ -748,8 +748,8 @@
                                             <div>
                                                 <input type="checkbox" name="enquiries" value="enquiries " class="qcheck" id="enqcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
                                                 <label for="enqcheck" class="textc">General Enquiries</label><br>
-                                                <input type="checkbox" name="website feedback" value="stressecho " class="qcheck" id="stressechocheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                <label for="stressechocheck" class="textc">Website Feedback</label><br>
+                                                <input type="checkbox" name="website feedback" value="webfeedback " class="qcheck" id="webfbcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <label for="webfbcheck" class="textc">Website Feedback</label><br>
                                                 <input type="checkbox" name="holter" value="holter " class="qcheck" id="holtercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="holtercheck" class="textc">Careers</label><br>
                                                 <input type="checkbox" name="consult" value="consult " class="qcheck" id="consultcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
