--- a/main/contact.html
+++ b/main/contact.html
@@ -750,8 +750,8 @@
                                                 <label for="enqcheck" class="textc">General Enquiries</label><br>
                                                 <input type="checkbox" name="website feedback" value="webfeedback " class="qcheck" id="webfbcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="webfbcheck" class="textc">Website Feedback</label><br>
-                                                <input type="checkbox" name="holter" value="holter " class="qcheck" id="holtercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                <label for="holtercheck" class="textc">Careers</label><br>
+                                                <input type="checkbox" name="careers" value="careers " class="qcheck" id="careerscheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <label for="careerscheck" class="textc">Careers</label><br>
                                                 <input type="checkbox" name="consult" value="consult " class="qcheck" id="consultcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="consultcheck" class="textc">Other</label>
                                             </div>
