--- a/main/contact.html
+++ b/main/contact.html
@@ -752,8 +752,8 @@
                                                 <label for="webfbcheck" class="textc">Website Feedback</label><br>
                                                 <input type="checkbox" name="careers" value="careers " class="qcheck" id="careerscheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="careerscheck" class="textc">Careers</label><br>
-                                                <input type="checkbox" name="consult" value="consult " class="qcheck" id="consultcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
-                                                <label for="consultcheck" class="textc">Other</label>
+                                                <input type="checkbox" name="other" value="other " class="qcheck" id="othercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <label for="othercheck" class="textc">Other</label>
                                             </div>
                                             
                                             <p class="mt-3 textc reqstar">Please select the option which best describes your experience with Melbourne Cardiology Services in the following statements:</p>
