--- a/main/contact.html
+++ b/main/contact.html
@@ -746,13 +746,13 @@
                                             
                                             <p class="mt-3 textc reqstar">Reason for Contact</p>
                                             <div>
-                                                <input type="checkbox" name="enquiries" value="enquiries " class="qcheck" id="enqcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-error-message="At least 1 selection is required." />
+                                                <input type="checkbox" name="enquiries" value="enquiries " class="qcheck" id="enqcheck" data-parsley-multiple="reasoncontactlink" data-parsley-error-message="At least 1 selection is required." />
                                                 <label for="enqcheck" class="textc">General Enquiries</label><br>
-                                                <input type="checkbox" name="website feedback" value="webfeedback " class="qcheck" id="webfbcheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <input type="checkbox" name="website feedback" value="webfeedback " class="qcheck" id="webfbcheck" data-parsley-multiple="reasoncontactlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="webfbcheck" class="textc">Website Feedback</label><br>
-                                                <input type="checkbox" name="careers" value="careers " class="qcheck" id="careerscheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <input type="checkbox" name="careers" value="careers " class="qcheck" id="careerscheck" data-parsley-multiple="reasoncontactlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="careerscheck" class="textc">Careers</label><br>
-                                                <input type="checkbox" name="other" value="other " class="qcheck" id="othercheck" data-parsley-multiple="investigationrequiredlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
+                                                <input type="checkbox" name="other" value="other " class="qcheck" id="othercheck" data-parsley-multiple="reasoncontactlink" data-parsley-mincheck="1" data-parsley-required data-parsley-error-message="Please choose at least 1" />
                                                 <label for="othercheck" class="textc">Other</label>
                                             </div>
                                             
