--- a/main/contact.html
+++ b/main/contact.html
@@ -760,8 +760,8 @@
                                             
                                             <p class="mt-3 textc reqstar">Scheduling an appointment is/was easy</p>
                                             <div>
-                                                <input type="radio" name="pfbschrating" value="Strongly Agree " class="" id="schestragradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
-                                                <label for="schestragradio" class="textc">Strongly Agree</label><br>
+                                                <input type="radio" name="pfbschrating" value="General Enquiries " class="" id="enqradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
+                                                <label for="enqradio" class="textc">General Enquiries</label><br>
                                                 <input type="radio" name="pfbschrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="scheagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbschrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
