--- a/main/contact.html
+++ b/main/contact.html
@@ -762,8 +762,8 @@
                                             <div>
                                                 <input type="radio" name="pfbschrating" value="General Enquiries " class="" id="enqradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="enqradio" class="textc">General Enquiries</label><br>
-                                                <input type="radio" name="pfbschrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="scheagradio" class="textc">Agree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Website Feedback " class="" id="webfbradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="webfbradio" class="textc">Website Feedback</label><br>
                                                 <input type="radio" name="pfbschrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="scheneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbschrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
