--- a/main/contact.html
+++ b/main/contact.html
@@ -766,8 +766,8 @@
                                                 <label for="webfbradio" class="textc">Website Feedback</label><br>
                                                 <input type="radio" name="pfbschrating" value="Careers " class="" id="careersradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="careersradio" class="textc">Careers</label><br>
-                                                <input type="radio" name="pfbschrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="schedisagradio" class="textc">Disagree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Other " class="" id="otherradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="otherradio" class="textc">Other</label><br>
                                                 <input type="radio" name="pfbschrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
