--- a/main/contact.html
+++ b/main/contact.html
@@ -767,9 +767,7 @@
                                                 <input type="radio" name="pfbschrating" value="Careers " class="" id="careersradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="careersradio" class="textc">Careers</label><br>
                                                 <input type="radio" name="pfbschrating" value="Other " class="" id="otherradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="otherradio" class="textc">Other</label><br>
-                                                <input type="radio" name="pfbschrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
+                                                <label for="otherradio" class="textc">Other</label>
                                             </div>
                                             
                                             <p class="mt-3 textc reqstar">Reception staff were helpful and courteous</p>
