--- a/main/contact.html
+++ b/main/contact.html
@@ -746,13 +746,13 @@
                                             
                                             <p class="mt-3 textc reqstar">Reason for Contact</p>
                                             <div>
-                                                <input type="radio" name="pfbschrating" value="General Enquiries " class="" id="enqradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="reasoncontactrating" value="General Enquiries " class="" id="enqradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="enqradio" class="textc">General Enquiries</label><br>
-                                                <input type="radio" name="pfbschrating" value="Website Feedback " class="" id="webfbradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="reasoncontactrating" value="Website Feedback " class="" id="webfbradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="webfbradio" class="textc">Website Feedback</label><br>
-                                                <input type="radio" name="pfbschrating" value="Careers " class="" id="careersradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="reasoncontactrating" value="Careers " class="" id="careersradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="careersradio" class="textc">Careers</label><br>
-                                                <input type="radio" name="pfbschrating" value="Other " class="" id="otherradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="reasoncontactrating" value="Other " class="" id="otherradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="otherradio" class="textc">Other</label>
                                             </div>
                                             
