--- a/main/contact.html
+++ b/main/contact.html
@@ -639,11 +639,7 @@
                 <div class="col-1"></div>
                 <div class="col-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
-                        If you are a doctor wishing to provide us with feedback of your experience with us, please use the Doctor Feedback form <a href="dfeedback" class="textlink textb">here</a>.
-                        <br><br>
-                        If you are a patient wishing to provide us with feedback of your experience with us, please use the Patient Feedback form <a href="pfeedback" class="textlink textb">here</a>.
-                        <br><br>
-                        If you would like a follow up to any concerns listed below, please provide your name and contact details. We will work to resolve any issues raised. 
+                        If you are a patient or doctor wishing to provide us with feedback of your experience with us, please use the appropriate Feedback form <a href="feedback" class="textlink textb">here</a>.
                     </p>
                     <hr style="border: 1px solid var(--color-contrast-higher)" class="mt-5">
                     <div class="container">
