--- a/main/404.html
+++ b/main/404.html
@@ -378,7 +378,7 @@
         }
 
     </style>
-    <title>About Us | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
+    <title>404 | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
 </head>
 
 <body onload="mcsloader()" style="cursor: none">
