--- a/main/404.html
+++ b/main/404.html
@@ -478,18 +478,9 @@
             </div>
             <div class="container-fluid feature row" style="margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
                 <div class="col-1"></div>
-                <div class="col-10 py-5 text3 container container--adaptive">
-                    <p class="textp1">
-                        Melbourne Cardiology Services started with a conviction to focus on quality, integrity, and excellence in a field where profits and growth are increasingly becoming dominating factors and primary motivation. Here at MCS, we don't seek to do more in the same timeframe, or cram as many patients as possible in a day. Our primary focus is on the quality of the tests performed and reported. We ensure the integrity and quality of the tests and reports by having an eye for detail, not rushing, but spending time as necessary to obtain as much information as possible and time to analyse every image acquired.
-                    </p>
-                    <p class="textp1 mt-4">
-                        Together with an attitude of excellence, we aim to offer a good experience and outcome to patients, as well as reports to referring doctors that are accurate and trustworthy. In keeping with our tenets of quality, integrity, and excellence, our doctors and sonographers are well experienced with many years in the field.
-                    </p>
-                    <p class="textp1 mt-4">
-                        At MCS, we strive to be more personal and relational in our approach, where patients won't be treated like a number or dollar sign, compared to the larger and more "corporate" feel of some other practices. MCS may be a relatively new practice, but we certainly are not new to the industry. If you are seeking a patient-focused experience, where quality, integrity, and excellence are at the core of what we do, then you've come to the right place.
-                    </p>
-                    <p class="textp1 mt-4">
-                        We endeavour to keep our waitlists low and reports will be sent in a timely manner.
+                <div class="col-10 py-5 text3 container container--adaptive center">
+                    <p class="textp1 center" style="text-align: center">
+                        Oh no! It seems the page you're looking for doesn't exist (yet)...
                     </p>
                 </div>
                 <div class="col-1"></div>
