--- a/main/404.html
+++ b/main/404.html
@@ -482,71 +482,26 @@
                     <p class="textp1 center" style="text-align: center">
                         Oh no! It seems the page you're looking for doesn't exist (yet)...
                     </p>
+                    <div class="" style="text-align: center">
+                        <div id="button1">
+                            <a class="mybtn link text3" href="echo"><span>Echocardiography</span></a>
+                            <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
+                        </div>
+                        <div id="button1">
+                            <a class="mybtn link text3" href="stressecho"><span>Stress Echocardiography</span></a>
+                            <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
+                        </div>
+                        <div id="button1" class="mb-5">
+                            <a class="mybtn link text3" href="holter"><span>Holter Monitoring</span></a>
+                            <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
+                        </div>
+                    </div>
                 </div>
                 <div class="col-1"></div>
             </div>
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
-                    <section class="feature feature--invert margin-bottom--xxl pt-5" style="z-index: 0;" data-scroll>
-                        <div class="feature__inner container container--adaptive">
-                            <div class="feature__text">
-                                <div class="feature__text-inner">
-                                    <div class="text-component text">
-                                        <small class="feature__label margin-bottom--xs">Our Team</small>
-                                        <h2 class="text" data-splitting>Kenny Lee</h2>
-                                        <p class="textp mt-3">Cardiac Sonographer & Manager</p>
-                                    </div>
-
-                                    <div class="margin-top--lg">
-                                        <div class="feature__cta flex flex--wrap flex--gap-sm flex--center-y">
-                                            <a class="ctabtn" data-micromodal-trigger="modal-1" href='javascript:void(0);'><span>Learn More &rarr;</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="feature__media" style="">
-                                <img class="" src="assets/img/Kenny.png" style="height: auto; max-width: 200px; margin-left: auto; margin-right: auto">
-                                <!--<figure>
-                            <svg width="620" height="420" viewBox="0 0 620 420" preserveAspectRatio="xMinYMin slice">
-                                <rect width="620" height="420" fill="var(--color-contrast-lower)" />
-                                <path d="M216 272L333 155L403.2 272H216Z" fill="var(--color-contrast-low)" />
-                                <path d="M239.8 178.8C252.723 178.8 263.2 168.323 263.2 155.4C263.2 142.477 252.723 132 239.8 132C226.877 132 216.4 142.477 216.4 155.4C216.4 168.323 226.877 178.8 239.8 178.8Z" fill="var(--color-contrast-low)" />
-                            </svg>
-                        </figure>-->
-                            </div>
-                        </div>
-                    </section>
-                    <section class="feature feature--invert margin-bottom--xl" data-scroll>
-                        <div class="feature__inner container container--adaptive">
-                            <div class="feature__text">
-                                <div class="feature__text-inner">
-                                    <div class="text-component text">
-                                        <small class="feature__label margin-bottom--xs">Our Team</small>
-                                        <h2 class="text" data-splitting>Larry Ponnuthurai</h2>
-                                        <p class="textp mt-3">Interventional Cardiologist</p>
-                                    </div>
-
-                                    <div class="margin-top--lg">
-                                        <div class="feature__cta flex flex--wrap flex--gap-sm flex--center-y">
-                                            <a class="ctabtn" data-micromodal-trigger="modal-2" href='javascript:void(0);'><span>Learn More &rarr;</span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="feature__media">
-                                <img class="" src="assets/img/Larry.png" style="height: auto; max-width: 200px; margin-left: auto; margin-right: auto">
-                                <!--<figure>
-                            <svg width="620" height="420" viewBox="0 0 620 420" preserveAspectRatio="xMinYMin slice">
-                                <rect width="620" height="420" fill="var(--color-contrast-lower)" />
-                                <path d="M216 272L333 155L403.2 272H216Z" fill="var(--color-contrast-low)" />
-                                <path d="M239.8 178.8C252.723 178.8 263.2 168.323 263.2 155.4C263.2 142.477 252.723 132 239.8 132C226.877 132 216.4 142.477 216.4 155.4C216.4 168.323 226.877 178.8 239.8 178.8Z" fill="var(--color-contrast-low)" />
-                            </svg>
-                        </figure>-->
-                            </div>
-                        </div>
-                    </section>
                     <footer class="main-footer" data-scroll>
                         <script>
                             var fero_server_id = '$2y$10$ZisV/mjILpfoj1Cb3toxlOw6PKpslf6sU20bgiwI9omoQSoNNTXzi';
