--- a/main/404.html
+++ b/main/404.html
@@ -484,16 +484,11 @@
                     </p>
                     <div class="" style="text-align: center">
                         <div id="button1">
-                            <a class="mybtn link text3" href="echo"><span>Echocardiography</span></a>
+                            <a class="mybtn link text3" href="echo"><span>Back to Home</span></a>
                             <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                         </div>
                         <div id="button1">
-                            <a class="mybtn link text3" href="stressecho"><span>Stress Echocardiography</span></a>
-                            <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
-                        </div>
-                        <div id="button1" class="mb-5">
-                            <a class="mybtn link text3" href="holter"><span>Holter Monitoring</span></a>
-                            <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
+                            <a class="mybtn link text3" href="stressecho"><span>Website Feedback</span></a>
                         </div>
                     </div>
                 </div>
