--- a/main/404.html
+++ b/main/404.html
@@ -484,7 +484,7 @@
                     </p>
                     <div class="" style="text-align: center">
                         <div id="button1">
-                            <a class="mybtn link text3" href="echo"><span>Back to Home</span></a>
+                            <a class="mybtn link text3" href="/"><span>Back to Home</span></a>
                         </div>
                         <div id="button1">
                             <a class="mybtn link text3" href="stressecho"><span>Website Feedback</span></a>
