--- a/main/404.html
+++ b/main/404.html
@@ -487,7 +487,7 @@
                             <a class="mybtn link text3" href="/"><span>Back to Home</span></a>
                         </div>
                         <div id="button1">
-                            <a class="mybtn link text3" href="stressecho"><span>Website Feedback</span></a>
+                            <a class="mybtn link text3" href="contact"><span>Website Feedback</span></a>
                         </div>
                     </div>
                 </div>
