--- a/main/404.html
+++ b/main/404.html
@@ -348,6 +348,11 @@
     <link rel="stylesheet" href="assets/fonts/toriga.css">
     <link rel="stylesheet" href="assets/fonts/vic.css">
     <style>
+        html,
+        body {
+            max-width: 100%;
+            overflow-x: hidden;
+        }
 
         .white {
             color: white !important;
