--- a/main/404.html
+++ b/main/404.html
@@ -501,7 +501,7 @@
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
-                    <footer class="main-footer" data-scroll>
+                    <footer class="main-footer">
                         <script>
                             var fero_server_id = '$2y$10$ZisV/mjILpfoj1Cb3toxlOw6PKpslf6sU20bgiwI9omoQSoNNTXzi';
 
@@ -512,7 +512,7 @@
                                 <nav class="main-footer__nav">
                                     <div class="main-footer__nav-list" style="text-align: center">
                                         <div class="main-footer__nav-item">
-                                            <h5 class="main-footer__nav-header" data-splitting>Quick Links</h5>
+                                            <h5 class="main-footer__nav-header">Quick Links</h5>
                                             <div class="main-footer__nav-link"><a href="about">About Us</a></div>
                                             <div class="main-footer__nav-link"><a href="referral">Referral Form</a></div>
                                             <div class="main-footer__nav-link"><a href="faqs">FAQs</a></div>
