--- a/main/404.html
+++ b/main/404.html
@@ -518,7 +518,7 @@
                                             <div class="main-footer__nav-link"><a href="faqs">FAQs</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
-                                            <h5 class="main-footer__nav-header" data-splitting>Services</h5>
+                                            <h5 class="main-footer__nav-header">Services</h5>
                                             <div class="main-footer__nav-link"><a href="services/echo">Echocardiogram</a></div>
                                             <div class="main-footer__nav-link"><a href="services/stressecho">Stress Echocardiogram</a></div>
                                             <div class="main-footer__nav-link"><a href="services/holter">Holter Monitoring</a></div>
