--- a/main/404.html
+++ b/main/404.html
@@ -530,7 +530,7 @@
                                             <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
-                                            <h5 class="main-footer__nav-header" data-splitting>Contact</h5>
+                                            <h5 class="main-footer__nav-header">Contact</h5>
                                             <div class="main-footer__nav-link"><a href="contact">General Enquiries</a></div>
                                             <div class="main-footer__nav-link"><a href="book">Request Appoinment</a></div>
                                             <div class="main-footer__nav-link"><a href="feedback">Submit Feedback</a></div>
