--- a/main/404.html
+++ b/main/404.html
@@ -468,7 +468,7 @@
                         <li><a href="about">About</a></li>
                         <li><a href="services/">Services</a></li>
                         <li><a href="locations/">Locations</a></li>
-                        <li><a href="patients">Patients</a></li>
+                        <li><a href="contact">Contact</a></li>
                         <li><a href="refer">Practitioners</a></li>
                     </ul>
                 </nav>
