--- a/main/404.html
+++ b/main/404.html
@@ -433,7 +433,7 @@
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
-                        <a href="patients" class="dtmenuheader white">Patients</a>
+                        <a href="contact" class="dtmenuheader white">Contact</a>
                         <ol class="sub-menu">
                             <li class="menu-item purple"><a href="book">Request Appointment</a></li>
                             <li class="menu-item purple"><a href="contact">General Enquiries</a></li>
