--- a/main/services/holter.html
+++ b/main/services/holter.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="copyright" content="Melbourne Cardiology Services">
     <meta name="owner" content="Melbourne Cardiology Services">
-    <meta name="url" content="https://melbournecardiology.services/services/echo">
+    <meta name="url" content="https://melbournecardiology.services/services/holter">
     <meta name="identifier-URL" content="https://melbournecardiology.services">
     <meta name="directory" content="submission">
     <meta name="coverage" content="Worldwide">
