--- a/main/search.html
+++ b/main/search.html
@@ -557,7 +557,7 @@
                                 <li class="main-footer__nav-item">
                                     <h5 class="main-footer__nav-header">Quick Links</h5>
                                     <div class="main-footer__nav-link"><a href="about">About Us</a></div>
-                                    <div class="main-footer__nav-link"><a href="referral">Referral Form</a></div>
+                                    <div class="main-footer__nav-link"><a href="refer">Referral Form</a></div>
                                     <div class="main-footer__nav-link"><a href="faqs">FAQs</a></div>
                                 </li>
                                 <li class="main-footer__nav-item">
