--- a/main/contact.html
+++ b/main/contact.html
@@ -804,7 +804,7 @@
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header" data-splitting>Quick Links</h5>
                                             <div class="main-footer__nav-link"><a href="about">About Us</a></div>
-                                            <div class="main-footer__nav-link"><a href="referral">Referral Form</a></div>
+                                            <div class="main-footer__nav-link"><a href="refer">Referral Form</a></div>
                                             <div class="main-footer__nav-link"><a href="faqs">FAQs</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
