--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -834,7 +834,7 @@
                                                 <label for="infoneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbinforating" value="Disagree " class="" id="infodisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="infodisagradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="infofstrdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="infostrdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="infostrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
 
