--- a/main/about.html
+++ b/main/about.html
@@ -665,7 +665,7 @@
                             Kenny is a very experienced and all-rounded cardiac sonographer and cardiac technologist. He has been scanning for over 25 years wth vast experience with both paediatric and adult patients.
                         </p>
                         <p class="text3 text11 mt-3">
-                            Kenny was initially trained in paediatric echocardiology by the prominent Dr. T H Goh, and was exposed to a myriad of congenital heart disease, including some experience with premature babies. He was also among one of the few techs at that time that was also trained in adult echocardiography concurrently. His training also included Holters, ECGs, stress testing, and cath lab monitoring.
+                            Kenny was initially trained in paediatric echocardiology by the prominent Dr. T H Goh, and was exposed to a myriad of congenital heart diseases, including some experience with premature babies. He was also among one of the few techs at that time that was also trained in adult echocardiography concurrently. His training also included Holters, ECGs, stress testing, and cath lab monitoring.
                         </p>
                         <p class="text3 text11 mt-3">
                             Kenny has a keen interest in the area of stress echocardiography and quality assurance in the echo lab. He has continued to maintain a busy load with transthoracic echocardiograms, and has been involved in training and mentoring trainee cardiac sonographers. He is a highly competent cardiac sonographer with strong emphasis on workplace excellence, integrity, and quality.
