--- a/main/about.html
+++ b/main/about.html
@@ -707,7 +707,7 @@
                             Larry completed his Specialist training in Cardiology at the Alfred Hospital in Melbourne. He has expertise in two cardiac subspecialties including a Fellowship in Cardiac imaging (echocardiography) at Monash Hospital and the Austin Hospital and a second Fellowship in Interventional Cardiology at the John Radcliffe Hospital in Oxford, United Kingdom.
                         </p>
                         <p class="text3 text11 mt-3">
-                            His research includes published articles in the fields of Interventional Cardiology, echocardiography and non-coronary intervention. He can offer patients a comprehensive cardiac care which includes:
+                            His research includes published articles in the fields of Interventional Cardiology, echocardiography and non-coronary intervention. He can offer patients comprehensive cardiac care which includes:
                         </p>
                         <ul class="text3 text11 mt-3">
                             <li>Interventional Cardiology (coronary artery blockages treated by balloons and stents)</li>
