--- a/main/refer.html
+++ b/main/refer.html
@@ -546,7 +546,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-12 col-sm-10 pt-5 text3 container container--adaptive">
                     <p class="textp1">
-                        MCS welcomes new patients. If you are a doctor and wish to refer a patient to us, please fill out the form below. Alternatively, we have PDF forms which you can download and email back to us.<br><br>
+                        MCS welcomes new patients. If you are a GP and wish to refer a patient to us, please fill out the form below. Alternatively, we have PDF forms which you can download and email back to us.<br><br>
                         <a href="assets/public/MCS%20Request%20Form%20(Interactive).pdf" download class="textlink"><i class="fas fa-file-download"></i> Request Form (Interactive)</a><br><br>
                         <a href="assets/public/MCS%20Request%20Form%20(Print).pdf" download class="textlink"><i class="fas fa-file-download"></i> Request Form (Print)</a>
                     </p>
