--- a/main/about.html
+++ b/main/about.html
@@ -652,7 +652,7 @@
                     <main class="modal__content" id="modal-1-content">
                         <div class="row row-inline mb-5">
                             <div class="col-sm-6 col-xs-12 d-flex justify-content-center">
-                                <img src="assets/img/Kenny.png" style="max-height: 200px; width: auto; margin-left: auto; margin-right: auto;">
+                                <img src="assets/img/Kenny1.png" style="max-height: 200px; width: auto; margin-left: auto; margin-right: auto;">
                             </div>
                             <div class="col-sm-6 col-xs-12 shrinkcentre">
                                 <h4 class="text black mt-2">Kenny Lee</h4>
