--- a/main/refer.html
+++ b/main/refer.html
@@ -824,7 +824,7 @@
                                                     </g>
                                                 </svg>
                                             </div>
-
+<div class="twingroup">
                                             <div class="input-wrapper twin">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Number required." type="text" name="patient medicare/dva number" title="Patient's Medicare/DVA Number" id="pmedidvanum" value="" aria-required="true" required="" class="form__input">
                                                 <label class="form__label reqstar" for="pmedidvanum">Medicare/DVA Number
@@ -848,7 +848,7 @@
                                                 </svg>
                                             </div>
                                             
-                                            <div class="input-wrapper">
+                                            <div class="input-wrapper twin">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Medicare/DVA Expiry required." type="text" title="Patient's Medicare/DVA date of expiry" id="medidvaexp" value="" aria-required="true" required="" class="form__input" oninput="formatDate()">
                                                 <input id="outputDate" type="date" name="patient dob" value="" style="display: none">
                                                 <label class="form__label reqstar" for="medidvaexp">Date of Expiry (dd/mm/yyyy)
@@ -871,6 +871,7 @@
                                                     </g>
                                                 </svg>
                                             </div>
+    </div>
 
                                             <div class="input-wrapper">
                                                 <input data-parsley-trigger="change" data-parsley-error-message="Address is required." type="text" name="patient address 1" title="Patient's Address 1" id="paddress1" value="" aria-required="true" required="" class="form__input">
